<resources>
    <string name="app_name">tallerComputadores</string>
    <string name="action_settings">Settings</string>
    <string name="marca">Marca</string>
    <string name="ram">RAM</string>
    <string name="color">Color</string>
    <string name="tipo">Tipo</string>
    <string name="sistema_operativo">Sistema Operativo</string>
    <string name="agregar_computador">Agregar Computador</string>
    <string name="hp">HP</string>
    <string name="dell">DELL</string>
    <string name="acer">ACER</string>
    <string-array name="marcas">
        <item>@string/hp</item>
        <item>@string/dell</item>
        <item>@string/acer</item>
    </string-array>
    <string name="blanco">Blanco</string>
    <string name="negro">Negro</string>
    <string name="purpura">Purpura</string>
    <string-array name="colores">
        <item>@string/blanco</item>
        <item>@string/negro</item>
        <item>@string/purpura</item>
    </string-array>
    <string name="pc_mesa">De Mesa</string>
    <string name="pc_portatil">Portatil</string>
    <string-array name="tipos">
        <item>@string/pc_mesa</item>
        <item>@string/pc_portatil</item>
    </string-array>
    <string name="windows">Windows</string>
    <string name="solaris">Solaris</string>
    <string name="mac_os">Mac OS</string>
    <string-array name="sistemas_operativos">
        <item>@string/windows</item>
        <item>@string/solaris</item>
        <item>@string/mac_os</item>
    </string-array>
    <string name="guardado_exitoso">Guardado exitosamente!</string>
    <string name="eliminado_exitoso">Computador eliminado</string>
    <string name="error_vacio">Debe llenar los campos en blanco!</string>
    <string name="crear">Crear</string>
    <string name="limpiar">Limpiar</string>
    <string name="informacion">Informacion</string>
    <string name="eliminar">Eliminar</string>
    <string name="pregunta_eliminar">Esta seguro que desea eliminarlo?</string>
    <string name="eliminar_si">Si, Eliminar</string>
    <string name="eliminar_no">No, Cancelar</string>
</resources>
